# NixLens

./: .gitignore  Cargo.toml  example.nix  nix_parser.pyi  pyproject.toml  requirements.txt  setup.py  shell.nix
docs/: CLI.md  features.md
docs/parser/: grammar.md
src/: lib.rs  main.rs  utils.rs
src/lsp/: conn.rs  cursor.rs  error.rs  mod.rs  requests.rs  transport.rs  types.rs
src/lsp/client/: builder.rs  mod.rs
src/lsp/protocol/: requests.rs  responses.rs
src/parser/: grammar.rs  mod.rs  nix.pest  parser.rs
src/parser/ast/: errors.rs  mod.rs
src/parser/ast/core/: identifier.rs  literal.rs  mod.rs  operators.rs  position.rs
src/parser/ast/expr/: bindings.rs  collection.rs  control.rs  expression.rs  function.rs  mod.rs  nix_errors.rs  operations.rs  property.rs  string.rs
tests/: grammar_render.rs
